# VariabilityParityGames

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Experimentalresult/: .~lock.minepump_zlnk.ods#  minepump_zlnk.ods
Report/: FPITEalg.tex  FeaturedParityGames.tex  PG_algs.tex  Packages.sty  Report.tex  Titlepage.tex  VariabilityParityGames.tex  VerificationUsingParityGames.tex  VerifyingTransitionSystems.tex  abstract.tex  appendixA.tex  appendixResults.tex  conclusion.tex  counterexampleBconjecture.ipe  experimental_evaluation_intro.tex  implementation.tex  introduction.tex  localFPITEalg.tex  locally_solving_VPGs.tex  localrecursivezlnk.tex  mybib.bib  pessimistic.tex  preliminatires_solving.tex  problem_statement.tex  prod_fam_solving.tex  recursivezlnk.tex  relatedwork.tex  renderipe.sh  results.tex  solving.tex  test_cases.tex  todo  unifiedPG.tex  vpg.tex
Report/Diagrams/: FTSVerificationUsingVPG.ipe  (+1 more)
experiments/: run.py
implementation/: CMakeLists.txt
implementation/VPGSolver/: .clang-format  CMakeLists.txt  FPIte.cpp  FPIte.h  Game.cpp  Game.h  MBR.cpp  MBR.h  SubsetExplicit.cpp  SubsetExplicit.h  UnorderedVertexSet.h  VectorBoolOptimized.cpp  VectorBoolOptimized.h  bool_reference.h  conf.h  main.cpp  zlnk.cpp  zlnk.h  zlnkPG.cpp  zlnkPG.h  zlnkVPG.cpp  zlnkVPG.h
implementation/VPGSolver/Algorithms/: FPIte.cpp  FPIte.h  MBR.cpp  MBR.h  zlnkPG.cpp  zlnkPG.h  zlnkVPG.cpp  zlnkVPG.h
implementation/VPGSolver/Algorithms/Datastructures/: ConfSetExplicit.cpp  ConfSetExplicit.h  UnorderedVertexSet.cpp  UnorderedVertexSet.h  VectorBoolOptimized.cpp  VectorBoolOptimized.h  bintree.cpp  bintree.h  bool_reference.cpp  bool_reference.h
implementation/VPGSolver/BDD/: bbdToDot.cpp  bddObj.cpp  bddObj.h
implementation/VPGSolver/Measurements/: bintree.cpp  bintree.h
implementation/VPGSolver/VPG/: Edge.cpp  Edge.h  Vertex.cpp  Vertex.h
implementation/VPGSolver/src/: Game.cpp  Game.h  Restriction.h  Submap.h  main.cpp  zlnkPG.cpp  zlnkPG.h  zlnkVPG.cpp  zlnkVPG.h
scripts/: print.py  results.json  run.py  table.tex
(+135177 files in other folders)
